--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic" rel="stylesheet">
-    <title>Портфолио Junior верстальщика</title>
+    <title>Рупор истины</title>
   </head>
 
   <body>
     <header class="page-header">
       <div class="container">
-      Номер узника ГУЛАГа
+      Мск и СПб
       </div>
     </header>
 
@@ -39,13 +39,13 @@
       <p>Мой подкаст</p>
 
       <h3>Блог начинающего подкастера</h3>
-      <p>Новости России и мире</p>
+      <p>Новости в России и мире</p>
       </div>
     </section>
 
     <footer class="page-footer">
       <div class="container">
-      Номер ИК
+      мы в тг, ям, гугл, эпл
       </div>
     </footer>
   </body>
