--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <body>
     <header class="page-header">
       <div class="container">
-      Мск и СПб
+      <a class='header-email' href="mailto:rusmuzhichok@gmail.com">rusmuzhichok@gmail.com</a>
+    <a class='header-phone' href="tel:+79876543210">+7 999 999 99 99</a>
       </div>
     </header>
 
@@ -24,6 +25,8 @@
     <section class="intro">
       <div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
+      <figure class="user-image">
+      <img src="files/user.jpg" width="928" height="536" alt="Фотография">
       <h3>Пара слов о себе</h3>
       <p>Русский мужичок открыто говорит обо всех пороках современного мира.</p>
       <h3>Чем могу быть полезен</h3>
@@ -34,10 +37,12 @@
     <section class="portfolio">
       <div class="container">
       <h2 class="subheading">Мои работы</h2>
-
+      <figure class="project-image">
+      <img src="files/project.jpg" width="928" height="536" alt="Cайт магазина товаров для дома">
+      </figure>
       <h3>Медиа</h3>
       <p>Мой подкаст</p>
-
+      <a class="button" href="source/project/index.html">Открыть страницу</a>
       <h3>Блог начинающего подкастера</h3>
       <p>Новости в России и мире</p>
       </div>
@@ -45,7 +50,8 @@
 
     <footer class="page-footer">
       <div class="container">
-      мы в тг, ям, гугл, эпл
+      <a class="footer-email" href="mailto:rusmuzhichok@gmail.com">rusmuzhichok@gmail.com</a>
+      <a class="footer-phone" href="tel:+79999999999">+7 999 999 99 99</a>
       </div>
     </footer>
   </body>
